--- a/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
@@ -53,7 +53,6 @@ article > form  > table > tr > td > {
 article > form > table > tr > td > select,
 article > form > table > tr > td > input {
     flex: 1 1 45%;
-    background-color: var(--primary-color-light);
     color: var(--primary-color-dark);
     padding: 10px;
     border-radius: 10px;
@@ -64,7 +63,6 @@ article > form > table > tr > td > textarea#message {
     flex: 1 1 100%;
     width: 100%;
     height: auto;
-    background-color: var(--primary-color-light);
     color: var(--primary-color-dark);
     padding: 10px;
     border-radius: 10px;
@@ -98,4 +96,11 @@ article > form > legend {
    font-size: var(--font-heading2-Desk);
 }
 
+article > form > table > tr:nth-child(odd) {
+    background-color: #FFF;
+}
+
+article > form > table > tr:nth-child(even) {
+    background-color: #CFF;
+}
 
