--- a/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
@@ -40,11 +40,9 @@ article > form {
     font-family: var(--font-family-raleway);
     font-size: var(--font-text-regular);
     padding: 1rem;
-    display: flex;
-    flex-wrap: wrap;
 }
 
-article > form  > table > tr > td > {
+article > form  > table > tr > td > label {
     flex: 1 1 45%;
     margin: 10px 0;
     font-size: var(--font-text-regular);
