--- a/WebMarkupWebsiteOpdrachtP1/css/Home_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Home_Page.css
@@ -11,6 +11,11 @@
     overflow: hidden;
 }
 
+#Hero_Place > figure > figcaption {
+    font-family: var(--font-family-raleway);
+    font-size: var(--font-text-regular);
+}
+
 
 #Hero_Website {
     width: 100%; 
