--- a/WebMarkupWebsiteOpdrachtP1/css/Home_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Home_Page.css
@@ -14,6 +14,7 @@
 #Hero_Place > figure > figcaption {
     font-family: var(--font-family-raleway);
     font-size: var(--font-text-regular);
+    text-align: center;
 }
 
 
