--- a/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
@@ -42,6 +42,16 @@ article > form {
     padding: 1rem;
 }
 
+article form table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+article form table td {
+    width: 50%;
+    padding: 10px;
+}
+
 article form  label {
     flex: 1 1 45%;
     margin: 10px 0;
