--- a/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
+++ b/WebMarkupWebsiteOpdrachtP1/css/Contact_Page.css
@@ -62,6 +62,7 @@ article form select,
 article form input {
     flex: 1 1 45%;
     color: var(--primary-color-dark);
+    background-color: var(--primary-color);
     padding: 10px;
     border-radius: 10px;
     margin: 10px 0;    
@@ -72,6 +73,7 @@ article form textarea#message {
     width: 100%;
     height: auto;
     color: var(--primary-color-dark);
+    background-color: var(--primary-color);
     padding: 10px;
     border-radius: 10px;
     margin: 10px 0;    
