--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -2,9 +2,47 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+* {
     border: 0;
     margin: 0;
     padding: 0;
 }
 
+/* Poppins font (headers) */
+.poppins-bold {
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.poppins-bold-italic {
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+/* Raleway (regular text) */
+
+.poppins-regular {
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.poppins-regular-italic {
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.poppins-thin {
+    font-family: "Poppins", serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .poppins-regular-italic {
+    font-family: "Poppins", serif;
+    font-weight: 100;
+    font-style: italic;
+  }
