--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -23,26 +23,27 @@
 
 /* Raleway (regular text) */
 
-.poppins-regular {
-    font-family: "Poppins", serif;
+.Raleway-regular {
+    font-family: "Raleway", sans-serif; 
     font-weight: 400;
     font-style: normal;
 }
 
-.poppins-regular-italic {
-    font-family: "Poppins", serif;
+.Raleway-regular-italic {
+    font-family: "Raleway", sans-serif; 
     font-weight: 400;
     font-style: italic;
 }
 
-.poppins-thin {
-    font-family: "Poppins", serif;
+/* Raleway (thin) */
+.Raleway-thin {
+    font-family: "Raleway", sans-serif; 
     font-weight: 100;
     font-style: normal;
   }
   
-  .poppins-regular-italic {
-    font-family: "Poppins", serif;
+  .Raleway-thin-italic {
+    font-family: "Raleway", sans-serif; 
     font-weight: 100;
     font-style: italic;
   }
