--- a/css/Contact_Page.css
+++ b/css/Contact_Page.css
@@ -3,3 +3,9 @@
     margin: 0;
     padding: 0;
 }
+
+#form_container{
+    border-style: double;
+    border-width: 5px;
+    border-color: #000000;
+}
