--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -24,26 +24,31 @@
 /* Raleway (regular text) */
 
 .Raleway-regular {
-    font-family: "Raleway", sans-serif; 
+    font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
 .Raleway-regular-italic {
-    font-family: "Raleway", sans-serif; 
+    font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-style: italic;
 }
 
 /* Raleway (thin) */
 .Raleway-thin {
-    font-family: "Raleway", sans-serif; 
+    font-family: "Raleway", sans-serif;
     font-weight: 100;
     font-style: normal;
-  }
-  
-  .Raleway-thin-italic {
-    font-family: "Raleway", sans-serif; 
+}
+
+.Raleway-thin-italic {
+    font-family: "Raleway", sans-serif;
     font-weight: 100;
     font-style: italic;
-  }
+}
+
+body {
+    background-color: #FFFFFF;
+    position: static;
+}
