width 50 form contact

--- a/css/Contact_Page.css
+++ b/css/Contact_Page.css
@@ -13,8 +13,11 @@
 #form_decorImage{
     float: left;
     overflow: hidden;
+    width: 50%;
 }
 
 #form_questionForm{
     float: right;
+    width: 50%;
 }
+
