--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -66,3 +66,33 @@ body {
 .Logo_Website img {
     height: auto;
 }
+
+/* navigation */
+
+nav {
+    background-color: #00508E;
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+}
+
+nav > ul {
+    list-style: none;
+    display: flex;
+    margin-right: 100px;
+    padding: 0;
+}
+
+nav > ul > li {
+    display: inline;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 8px;
+    margin: 0px 5px;
+    transition: background-color 0.5s ease; 
+    text-align: center;
+}
+
