--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -59,8 +59,8 @@ body {
 .Logo_Website {
     display: flex;
     justify-content: flex-start; 
-    width: 180px;
-    padding: 0 100px;
+    width: 20%;
+    padding: 0 5%;
 }
 
 .Logo_Website img {
