--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -61,9 +61,6 @@ body {
     justify-content: flex-start; 
     width: 20%;
     padding: 0 5%;
-}
-
-.Logo_Website img {
     height: auto;
 }
 
@@ -102,6 +99,14 @@ nav > ul > li:hover {
     
 }
 
+nav > ul > li > a {
+    background: transparent;
+    color: #000000;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 1rem;
+}
+
 nav > ul > .contact {
     background-color: var #86CAFF;
 }
@@ -109,4 +114,44 @@ nav > ul > .contact {
 nav > ul > .contact:hover {
     background-color:  #FF9E3E;  
     opacity: 0.8;
+}
+
+/* footer */
+footer {
+    background-color: #00508E;
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+}
+
+footer > p {
+    color:  #FFFFFF;
+    flex: 1;
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 1rem;
+}
+
+footer > ul {
+    list-style: none;
+    display: flex;
+    margin-right: 100px;
+    padding: 0;
+}
+
+footer > ul > li {
+    display: inline;
+    background-color: transparent;
+    padding: 0px 50px;
+}
+
+footer > ul > li > a {
+   color:  #FFFFFF;
+   background: transparent;
+   text-decoration: none;
+   font-family: "Raleway", sans-serif;
+   font-size: 1rem;
 }
