--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -155,3 +155,19 @@ footer > ul > li > a {
    font-family: "Raleway", sans-serif;
    font-size: 1rem;
 }
+
+/* redirect button (to other pages or other websites) */
+
+.redirect_button{
+    display: inline;
+    background-color: #55FD90;
+    border-radius: 10px;
+    padding: 8px;
+    margin: 0px 5px;
+    transition: background-color 0.5s ease; 
+    text-align: center;
+}
+
+.redirect_button :hover{
+   opacity: 0.8;
+}
