--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -4,11 +4,24 @@
     padding: 0;
 }
 
+#Header_Container{
+    display: flex;
+    width: 100%;
+    height: 30%;
+}
+
 #Hero_Homepage {
     width: 70%; 
     height: auto; 
     display: block; 
     margin: auto;
+    position: relative;
+}
+
+#Hero_Homepage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #Hero_Homepage > .Hero_Text {
@@ -38,10 +51,19 @@
 
 }
 
-#Aside_Homepage{
+#Aside_Homepage {
     width: 30%;
-    height: auto; 
-    display: block; 
-    margin: auto;
+    padding: 10px;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#Aside_Homepage img {
+    width: 50%;
+    height: auto;
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
