--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -12,7 +12,7 @@
 
 #Hero_Homepage {
     width: 70%; 
-    height: auto; 
+    height: 100%; 
     display: block; 
     margin: auto;
     position: relative;
@@ -29,7 +29,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color:  #FFFFFF;;
+    color:  #FFFFFF;
     font-family: "Poppins", serif;
     width: auto;
     height: auto;
