--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -66,3 +66,13 @@
     object-fit: cover;
 }
 
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+.grid_Item{
+    
+}
