--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -59,9 +59,10 @@ body {
 .Logo_Website {
     display: flex;
     justify-content: flex-start; 
-    width: 20%;
+    width: 10%;
     padding: 0 5%;
     height: auto;
+    object-fit: cover;
 }
 
 /* navigation */
