--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -73,6 +73,38 @@ main {
     padding: 20px;
 }
 
-.grid_Item{
-    
+.grid-item {
+    padding: 50px;
+    background-color: #C8C8C8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grid-item figure {
+    width: 100%;
+    text-align: center;
+}
+
+.grid-item img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.grid-item h5 {
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 0 5% 5% 5%;
+}
+
+.grid-item p {
+    text-align: left;
+    font-size: 1rem;
+}
+
+.grid-item .redirect_button a {
+    text-decoration: none;
+    background: transparent;
+    color: #000000;
 }
