--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -21,6 +21,10 @@
     font-style: italic;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
+}
+
 /* Raleway (regular text) */
 
 .Raleway-regular {
@@ -48,6 +52,9 @@
     font-style: italic;
 }
 
+p {
+    font-family: "Raleway", sans-serif;
+}
 
 /* body */
 body {
