--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -75,7 +75,6 @@ main {
 
 .grid-item {
     padding: 50px;
-    background-color: #C8C8C8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,6 +89,13 @@ main {
     width: 100%;
     height: auto;
     object-fit: cover;
+}
+
+.grid-item article {
+    display: flex;
+    background-color:  #C8C8C8;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .grid-item h5 {
