logo height test

--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -68,7 +68,7 @@ body {
     justify-content: flex-start; 
     width: 10%;
     padding: 0 5%;
-    height: auto;
+    height: 80%;
     object-fit: cover;
 }
 
