--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -73,43 +73,43 @@ main {
     padding: 20px;
 }
 
-.grid-item {
+.grid_Item {
     padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.grid-item figure {
+.grid_Item figure {
     width: 100%;
     text-align: center;
 }
 
-.grid-item img {
+.grid_Item img {
     width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-.grid-item article {
+.grid_Item article {
     display: flex;
     background-color:  #C8C8C8;
     border-radius: 10px;
     overflow: hidden;
 }
 
-.grid-item h5 {
+.grid_Item h5 {
     text-align: center;
     font-size: 1.5rem;
     margin: 0 5% 5% 5%;
 }
 
-.grid-item p {
+.grid_Item p {
     text-align: left;
     font-size: 1rem;
 }
 
-.grid-item .redirect_button a {
+.grid_Item .redirect_button a {
     text-decoration: none;
     background: transparent;
     color: #000000;
