--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -69,27 +69,31 @@
 main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    padding: 20px;
+    gap: 50px;
+    padding: 50px;
 }
 
-.grid_Item {
+.grid_Container {
     padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.grid_Container article {
+    display: flex;
     background-color:  #C8C8C8;
     border-radius: 10px;
     overflow: hidden;
 }
 
 /* image section */
-.grid_Item .image_section {
+.grid_Container .image_section {
     flex: 1;
     padding-right: 20px;
 }
 
-.grid_Item img {
+.grid_Container img {
     width: 80%;
     height: 50%;
     object-fit: cover;
@@ -97,33 +101,33 @@ main {
 
 /* tects section */
 
-.grid_Item .text_section {
+.grid_Container .text_section {
     flex: 2;
     text-align: left;
 }
 
 /* figure/caption */
-.grid_Item figure {
+.grid_Container figure {
     width: 100%;
     text-align: center;
 }
 
-.grid_Item figcaption {
+.grid_Container figcaption {
     font-family: "Raleway", sans-serif;
 }
 
-.grid_Item h5 {
+.grid_Container h5 {
     text-align: center;
     font-size: 1.5rem;
     margin: 0 5% 5% 5%;
 }
 
-.grid_Item p {
+.grid_Container p {
     text-align: left;
     font-size: 1rem;
 }
 
-.grid_Item .redirect_button a {
+.grid_Container .redirect_button a {
     text-decoration: none;
     background: transparent;
     color: #000000;
