--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -79,7 +79,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
-    padding: 0;
+    padding: 0; 
 }
 
 .grid_Container article {
@@ -102,14 +102,13 @@ main {
     object-fit: cover;
 }
 
-/* tects section */
-
+/* text section */
 .grid_Container .text_section {
-    flex: 2;
-    text-align: left;
+    flex: 1;
+    padding: 10px;
+    text-align: center;
 }
 
-/* figure/caption */
 .grid_Container figure {
     width: 100%;
     text-align: center;
@@ -122,16 +121,22 @@ main {
 .grid_Container h5 {
     text-align: center;
     font-size: 1.5rem;
-    margin: 0 5% 5% 5%;
+    margin: 10px 0;
 }
 
 .grid_Container p {
-    text-align: left;
+    text-align: center;
     font-size: 1rem;
 }
 
 .grid_Container .redirect_button a {
     text-decoration: none;
     background: transparent;
-    color: #000000;
+    color: #55FD90;
+    padding: 10px;
+    display: inline-block;
+}
+
+.grid_Container .redirect_button a:hover {
+    background-color: #FF9E3E;
 }
