--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -75,30 +75,37 @@
 }
 
 .grid_Container article {
+    width: 100%;
     display: flex;
     background-color: #C8C8C8;
     border-radius: 10px;
     overflow: hidden;
-    width: 100%;
 }
 
 /* image section */
 .grid_Container .image_section {
     flex: 1;
-    padding-right: 20px;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 .grid_Container img {
     width: 100%;
     height: 80%;
     object-fit: cover;
+    border-radius: 10px;
+    padding: 5%;
 }
 
 /* text section */
 .grid_Container .text_section {
-    flex: 2;
-    padding: 20px;
-    text-align: left;
+    flex: 1;
+    padding: 15px;
+    display: flex;
+    flex-direction: column; 
+    padding: 5%;
+    position: relative;
 }
 
 .grid_Container figure {
@@ -113,10 +120,36 @@
 .grid_Container h5 {
     text-align: center;
     font-size: 1.5rem;
+    font-family:  "Poppins", serif;
     margin: 10px 0;
 }
 
 .grid_Container p {
+    text-align: left;
+    font-size: 1rem;
+    font-family: "Raleway", sans-serif;
+}
+
+.grid_Containert button {
     text-align: center;
     font-size: 1rem;
+    font-family: "Raleway", sans-serif;
+    background-color: #55FD90;
+    position: absolute;
+    padding: 10px;
+    bottom: 40px;
+    right: 40px;
+    width: 30%;
+    transition: background-color 0.5s ease; 
+    border-radius: 10px;
+}
+
+.grid_Containert button:hover {
+    background-color: #FF9E3E;
+}
+
+.grid_Containert a {
+    text-decoration: none;
+    background: transparent;
+    color: #000000;
 }
