--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -159,24 +159,15 @@ footer > ul > li > a {
 }
 
 .currentpage_Button{
-    text-align: center;
-    font-size: 1rem;
-    font-family: "Raleway", sans-serif; 
     background-color: #55FD90;
-    position: absolute;
-    padding: 10px;
-    bottom: 40px;
-    right: 40px;
-    width: 30%;
     transition: background-color 0.5s ease; 
-    border-radius: 10px;
 }
 
 .currentpage_Button:hover {
     background-color: #FF9E3E;
 }
 
-.currentpage_Button a {
+.currentpage_Button > a {
     text-decoration: none;
     background: transparent;
     color: #000000;
