--- a/css/Home_Page.css
+++ b/css/Home_Page.css
@@ -128,6 +128,7 @@
     text-align: left;
     font-size: 1rem;
     font-family: "Raleway", sans-serif;
+    text-indent: 5%;
 }
 
 .grid_Container button {
