--- a/css/MainStyleFile.css
+++ b/css/MainStyleFile.css
@@ -65,6 +65,10 @@ p {
     font-family: "Raleway", sans-serif;
 }
 
+p::first-letter {
+    font-size: 1.25em;
+}
+
 /* body */
 body {
     background-color: #FFFFFF;
@@ -127,6 +131,10 @@ nav>ul>.contact:hover {
     opacity: 0.8;
 }
 
+a:active {
+    color: #FF9E3E;
+}
+
 /* footer */
 footer {
     background-color: #00508E;
@@ -167,6 +175,7 @@ footer>ul>li>a {
     font-size: 1rem;
 }
 
+/* current page button */
 .currentpage_Button {
     background-color: #55FD90;
     transition: background-color 0.5s ease;
@@ -180,4 +189,39 @@ footer>ul>li>a {
     text-decoration: none;
     background: transparent;
     color: #000000;
+}
+
+/* media queries */
+
+@media (max-width: 768px) {
+    nav>ul {
+        margin-right: 50px;
+    }
+
+    nav>ul>li {
+        padding: 5px;
+        margin: 0 3px;
+    }
+
+    nav>ul>li>a {
+        font-size: 0.9rem;
+    }
+
+    footer>ul {
+        margin-right: 50px;
+    }
+
+    footer>ul>li {
+        padding: 0 30px;
+    }
+
+    footer>ul>li>a {
+        font-size: 0.9rem;
+    }
+
+    footer>p {
+        font-size: 0.9rem;
+    }
+
+
 }
